--- a/autonomous_systems.tex
+++ b/autonomous_systems.tex
@@ -2,8 +2,23 @@
 
 Autonomous system (AS) is defined as a group of connected networks with a single routing policy\cite{rfc1930}.
 
+The Internet and large networks in general naturally tend to be split in parts with relatively few
+entry and exit points, such as networks of different IP operators, corporate entities, or large divisions
+of a single company.
+
+Those subnetworks typically have multiple internal connections between routers, use a single interior
+routing protocol, and have internal routing optimized according to technical considerations.
+
+Routing between those networks is often heavily influenced by political considerations, such as
+corporate relationships and bandwidth costs. Furthermore, since those networks interact with each other
+only at a few points, their internal structure becomes unimportant for routing decisions.
+
+Autonomous system concept is used to denote such such networks. The routers those networks interact
+through are commonly referred to as autonomous system border routers \footnote{OSPF protocol uses
+``autonomous system border router'' (ASBR) as a technical term with specific meaning.} (or, interchangeably, edge routers).
+
 From technical point of view, an \emph{autonomous system} (AS) is a group of BGP routers that use the same
-\emph{autonomous system number} (ASN).
+\emph{autonomous system number} (ASN). ASN is a required configuration parameter in every BGP implementation.
 
 \section{AS numbers}
 
