Fix URL in bibliography.

--- a/bgp_bib.bib
+++ b/bgp_bib.bib
@@ -4,7 +4,7 @@
 @MISC{rfc5398,
   author = {G. Huston},
   title = {Autonomous System ({AS}) Number Reservation for Documentation Use},
-  howpublished = {http://tools.ietf.org/html/rfc5398},
+  howpublished = {\url{http://tools.ietf.org/html/rfc5398}},
   month = {December},
   year = {2008},
   owner = {dmbaturin},
