--- a/autonomous_systems.tex
+++ b/autonomous_systems.tex
@@ -1,3 +1,8 @@
+% Copright (C) 2014 Daniil Baturin <daniil at baturin dot org>
+%
+% This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License.
+% To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/4.0/.
+
 \chapter{Autonomous systems}
 
 Autonomous system (AS) is defined as a group of connected networks with a single routing policy\cite{rfc1930}.
