--- a/autonomous_systems.tex
+++ b/autonomous_systems.tex
@@ -11,7 +11,7 @@ The Internet and large networks in general naturally tend to be split in parts w
 entry and exit points, such as networks of different IP operators, corporate entities, or large divisions
 of a single company.
 
-Those subnetworks typically have multiple internal connections between routers, use a single interior
+Those subnetworks typically have multiple internal connections between routers, use single interior
 routing protocol, and have internal routing optimized according to technical considerations.
 
 Routing between those networks is often heavily influenced by political considerations, such as
@@ -25,7 +25,7 @@ only at a few points, their internal structure becomes unimportant for routing d
     \label{fig:as_example}
 \end{figure}
 
-Autonomous system concept is used to denote such such networks. The routers those networks interact
+Autonomous system concept is used to denote such networks. The routers those networks interact
 through are commonly referred to as autonomous system border routers\footnote{OSPF protocol uses
 ``autonomous system border router'' (ASBR) as a technical term with specific meaning.} (or, interchangeably, edge routers).
 
