Add term and code macros.

--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,11 @@
 \parindent=1cm
 \emergencystretch=5pt
 
+% Commands
+\newcommand{\term}[1] {{\textit{#1}}}
+\newcommand{\code}[1] {{\texttt{#1}}}
+
+
 % Title Page
 \title{A practical guide to BGP}
 \author{Daniil Baturin}
