Add BGP overview reference to the main file.

--- a/main.tex
+++ b/main.tex
@@ -47,6 +47,7 @@
 \begin{document}
   \input{routing_overview.tex}
   \input{autonomous_systems.tex}
+  \input{bgp_overview.tex}
 
 \bibliographystyle{plain}
 \bibliography{bgp_bib}
