--- a/bgp_bib.bib
+++ b/bgp_bib.bib
@@ -42,3 +42,13 @@
   timestamp = {2014.03.24}
 }
 
+@MISC{rfc4271,
+  author = {Y. Rekhter, T. Li, S. Hares},
+  title = {A Border Gateway Protocol 4 ({BGP-4})},
+  howpublished = {\url{http://tools.ietf.org/html/rfc4271}},
+  month = {January},
+  year = {2006},
+  owner = {dmbaturin},
+  timestamp = {2014.12.22}
+}
+
