added Tex controll char

--- a/routing_overview.tex
+++ b/routing_overview.tex
@@ -195,7 +195,7 @@ Static & 1 \\
 eBGP & 20 \\
 OSPF & 110 \\
 ISIS & 115 \\
-RIP (and RIPng) 120 \\
+RIP (and RIPng) & 120 \\
 iBGP & 200 \\
 \hline
 \end{tabular}
